# department_task

./: Makefile  README.md  pyproject.toml
src/: data.py  metrics.py  model.py  pl_module.py
src/find_best_threshold/: __main__.py
src/predict/: __main__.py
src/prepare_train_data/: __main__.py
src/split_data/: __main__.py
src/train/: __main__.py
