[tool.poetry]
name = "abbyy"
version = "0.1.0"
description = ""
authors = ["Sergei Bogdanov <svbogdanov26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.20.1"
sentencepiece = "^0.1.96"
torch = "^1.12.0"
loguru = "^0.6.0"
pytorch-lightning = "^1.6.5"
wandb = "^0.12.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
